[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Areas/Area.gd" type="Script" id=1]
[ext_resource path="res://assets/art/TileSets/tile_sets.tres" type="TileSet" id=2]

[node name="Area" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="TileMaps" type="Node2D" parent="."]

[node name="RealTileMap" type="TileMap" parent="TileMaps"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="FakeTileMap" type="TileMap" parent="TileMaps"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1

[node name="Rooms" type="Node2D" parent="."]

[node name="Collectibles" type="Node2D" parent="."]

[node name="Bonfires" type="Node2D" parent="."]

[node name="Connectors" type="Node2D" parent="."]

[node name="PlayerSpawnPoints" type="Node2D" parent="."]

[node name="NPCs" type="Node2D" parent="."]

[node name="Gates" type="Node2D" parent="."]

[node name="BossGates" type="Node2D" parent="."]

[node name="BossSpawnPoint" type="Position2D" parent="."]

[node name="BossTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossTrigger"]

[connection signal="body_entered" from="BossTrigger" to="." method="_on_BossTrigger_body_entered" flags=3]
